<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<parent>
		<groupId>com.sentrysoftware.integration</groupId>
		<artifactId>java-parent</artifactId>
		<version>13</version>
	</parent>

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sentrysoftware</groupId>
	<artifactId>matrix</artifactId>
	<version>0.5-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Matrix</name>
	<description>Matrix Parent</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.source>11</maven.compiler.source>
		<lombok.version>1.18.12</lombok.version>
		<slf4j.version>1.7.30</slf4j.version>
		<jupiter.version>5.6.2</jupiter.version>
		<mockito.version>3.6.28</mockito.version>
		<maven-plugin-api.version>2.0</maven-plugin-api.version>
		<maven-plugin-annotations.version>3.2</maven-plugin-annotations.version>
		<maven-reporting-impl.version>3.0.0</maven-reporting-impl.version>
		<maven-reporting-api.version>3.0</maven-reporting-api.version>
		<plexus-utils.version>3.0.8</plexus-utils.version>
		<maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
		<jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
		<hardware-connectors.version>24-SNAPSHOT</hardware-connectors.version>
		<maven-filtering.version>3.1.1</maven-filtering.version>
		<spring.version>5.3.5</spring.version>
		<matsya.version>3.13.00-SNAPSHOT</matsya.version>
		<io.springfox.version>2.9.2</io.springfox.version>
		<picocli-spring-boot.version>4.6.1</picocli-spring-boot.version>
		<spring-boot.version>2.4.5</spring-boot.version>
		<prometheus-client.version>0.10.0</prometheus-client.version>
		<jackson.version>2.12.3</jackson.version>
	</properties>

	<modules>
		<module>matrix-engine</module>
		<module>connector-compiler-plugin</module>
		<module>hardware-sentry-cli</module>
		<module>hardware-sentry-prometheus</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.maven.reporting</groupId>
				<artifactId>maven-reporting-impl</artifactId>
				<version>${maven-reporting-impl.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.reporting</groupId>
				<artifactId>maven-reporting-api</artifactId>
				<version>${maven-reporting-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.plexus</groupId>
				<artifactId>plexus-utils</artifactId>
				<version>${plexus-utils.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-plugin-api</artifactId>
				<version>${maven-plugin-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.plugin-tools</groupId>
				<artifactId>maven-plugin-annotations</artifactId>
				<version>${maven-plugin-annotations.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.maven.shared</groupId>
				<artifactId>maven-filtering</artifactId>
				<version>${maven-filtering.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sentrysoftware</groupId>
				<artifactId>matrix-engine</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>compile</scope>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sentrysoftware.shared</groupId>
				<artifactId>hardware-connectors</artifactId>
				<version>${hardware-connectors.version}</version>
				<classifier>matrix</classifier>
			</dependency>
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>${jupiter.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-junit-jupiter</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-inline</artifactId>
				<version>${mockito.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sentrysoftware.patrol.matsya</groupId>
				<artifactId>module-tablejoin</artifactId>
				<version>${matsya.version}</version>
			</dependency>
			<dependency>
				<groupId>com.sentrysoftware.patrol.matsya</groupId>
				<artifactId>module-snmpclient</artifactId>
				<version>${matsya.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger2</artifactId>
				<version>${io.springfox.version}</version>
			</dependency>
			<dependency>
				<groupId>io.springfox</groupId>
				<artifactId>springfox-swagger-ui</artifactId>
				<version>${io.springfox.version}</version>
			</dependency>
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli-spring-boot-starter</artifactId>
				<version>${picocli-spring-boot.version}</version>
			</dependency>
			<dependency>
				<groupId>io.prometheus</groupId>
				<artifactId>simpleclient</artifactId>
				<version>${prometheus-client.version}</version>
			</dependency>
			<dependency>
				<groupId>io.prometheus</groupId>
				<artifactId>simpleclient_common</artifactId>
				<version>${prometheus-client.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>${maven-plugin-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-maven-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>